--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -83,8 +83,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rGroupBoardSize" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvNumGame"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/gameConfigDropDown"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnErase"
+        app:layout_constraintEnd_toEndOf="@+id/btnErase"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btnErase" />
+
+    <TextView
+        android:id="@+id/tvShowNumGame"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/btnErase"
+        app:layout_constraintEnd_toStartOf="@+id/rGroupNumOfMines"
+        app:layout_constraintStart_toEndOf="@+id/gameConfigDropDown"
+        app:layout_constraintTop_toTopOf="@+id/gameConfigDropDown" />
+
+    <TextView
+        android:id="@+id/tvNumGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gameConfig"
+        app:layout_constraintBottom_toTopOf="@+id/gameConfigDropDown"
+        app:layout_constraintStart_toStartOf="@+id/gameConfigDropDown" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
