--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/blue_sky_cartoon"
     tools:context=".OptionScreen">
 
     <TextView
@@ -92,6 +93,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/btnErase"
         app:layout_constraintEnd_toEndOf="@+id/btnErase"
         app:layout_constraintHorizontal_bias="1.0"
