Added features and bug fixed.
Added Shared Preference to save user preference, and fixed tap back button in gameScreen does not deliver to menu screen but mainActivity.

--- a/app/src/main/res/values/board_size.xml
+++ b/app/src/main/res/values/board_size.xml
@@ -6,4 +6,5 @@
         <item>@string/_6Times15</item>
     </string-array>
 
+    <string name="default_board_size">@string/_4Times6</string>
 </resources>
